--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         <a href="https://www.linkedin.com/in/ali-mortada-b6bb08281/" target="_blank" title="Ali Mortada">
             <img src="./linked in.jfif" alt="asa" width="30" height="30">
         </a>
-        <p class="copyright">&copy; Copyright Ali Mortada</p>
+        <p class="copyright">&copy;  Ali Mortada</p>
     </footer>
 </body>
 </html>
